<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>in.retalemine</groupId>
	<artifactId>mvnweb-vaadin</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>Vaadin web application</name>
	<url>http://maven.apache.org</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>3.8.1</junit.version>
		<slf4j.version>1.7.6</slf4j.version>
		<log4j.version>2.0-rc1</log4j.version>
		<vaadin.version>7.1.12</vaadin.version>
		<blackboard-addon.version>2.2.0</blackboard-addon.version>
		<jscience.version>4.3.1</jscience.version>
		<jetty.plugin.version>9.0.7.v20131107</jetty.plugin.version>
		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
		<lifecycle-mapping.plugin.version>1.0.0</lifecycle-mapping.plugin.version>
	</properties>
	<repositories>
		<repository>
			<id>vaadin-addons</id>
			<url>http://maven.vaadin.com/vaadin-addons</url>
		</repository>
	</repositories>
	<dependencies>
		<!-- testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- logger -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<!-- UI: vaadin -->
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-server</artifactId>
			<version>${vaadin.version}</version>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-client-compiled</artifactId>
			<version>${vaadin.version}</version>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-themes</artifactId>
			<version>${vaadin.version}</version>
		</dependency>
		<!-- UI: vaadin add-on -->
		<dependency>
			<groupId>org.vaadin.addons</groupId>
			<artifactId>blackboard</artifactId>
			<version>${blackboard-addon.version}</version>
		</dependency>
		<!-- util: jscience -->
		<dependency>
			<groupId>org.jscience</groupId>
			<artifactId>jscience</artifactId>
			<version>${jscience.version}</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>mvnweb-vaadin</finalName>
		<plugins>
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>${jetty.plugin.version}</version>
				<configuration>
					<stopKey>STOP</stopKey>
					<stopPort>9999</stopPort>
					<scanIntervalSeconds>5</scanIntervalSeconds>
					<!-- changes path from root to this - http://localhost:8080/mvnweb-vaadin/1.0-SNAPSHOT/ -->
					<!-- <webApp> -->
					<!-- <contextPath>/${project.artifactId}/${project.version}</contextPath> -->
					<!-- </webApp> -->
					<jvmArgs>-XX:PermSize=64m -XX:MaxPermSize=128m</jvmArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-maven-plugin</artifactId>
				<version>${vaadin.plugin.version}</version>
				<configuration>
					<extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
					<!-- <runTarget>mobilemail</runTarget> -->
					<!-- We are doing "inplace" but into subdir VAADIN/widgetsets. -->
					<!-- This way compatible with Vaadin eclipse plugin. -->
					<!-- <webappDirectory>${basedir}/src/main/webapp/VAADIN/widgetsets</webappDirectory> -->
					<!-- <hostedWebapp>${basedir}/src/main/webapp/VAADIN/widgetsets</hostedWebapp> -->
					<noServer>true</noServer>
					<!-- Remove draftCompile when project is ready -->
					<draftCompile>false</draftCompile>
					<compileReport>true</compileReport>
					<style>OBF</style>
					<strict>true</strict>
					<runTarget>http://localhost:8080/</runTarget>
				</configuration>
				<executions>
					<execution>
						<configuration>
							<!-- if you don't specify any modules, the plugin will find them -->
							<!-- <modules> -->
							<!-- <module>com.vaadin.demo.mobilemail.gwt.ColorPickerWidgetSet</module> -->
							<!-- </modules> -->
						</configuration>
						<goals>
							<!-- <goal>clean</goal> -->
							<!-- <goal>resources</goal> -->
							<!-- <goal>update-theme</goal> -->
							<!-- <goal>update-widgetset</goal> -->
							<goal>compile-theme</goal>
							<!-- <goal>compile</goal> -->
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>${lifecycle-mapping.plugin.version}</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.vaadin</groupId>
										<artifactId>
											vaadin-maven-plugin
										</artifactId>
										<versionRange>
											[7.1.12,)
										</versionRange>
										<goals>
											<goal>resources</goal>
											<goal>update-widgetset</goal>
											<goal>compile</goal>
											<goal>update-theme</goal>
											<goal>compile-theme</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
